# snapshot

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  TODO.md  env.yml  pyproject.toml
src/snapshot/: __init__.py  datasets.py
src/snapshot/cli/: build.py  snapshot.py
src/snapshot/data/: A2CPS_Release_1.1_Notes.docx  A2CPS_Release_2.0_Notes.docx  A2CPS_Release_2.1_Notes.docx  A2CPS_Release_3.0_Notes.docx  CHANGES  DataFreeze_1_022823.csv  DataFreeze_2_022924.csv  DataFreeze_3_022825.csv  README  README.md  aparc.json  applied_pressure.csv  aseg.json  cluster_volumes.json  confounds.json  connectivity-acompcor.json  connectivity-confounds.json  connectivity.json  dataset_description.json  demographics-2023-05-19.csv  demographics-2023-10-31.csv  demographics-2025-01-10.csv  desc-aparcaseg_dseg.tsv  deviceserialnumber.tsv  diffusion_regional_stats.json  disruption.json  dwi_networks.json  fslanat.json  gift_amplitudes.json  gift_biomarkers.json  gift_connectivity.json  gm_morph.json  guids.csv  headers.json  imaging-log-20230927T010002Z.csv  imaging-log-20240618T010003Z.csv  imaging-log-20241217T010003Z.csv  imaging-log-20250129T010002Z.csv  imaging-log-20250612T010003Z.csv  mask_volumes.json  (+24 more)
src/snapshot/data/dataset_descriptions/: brainager.json  cat12.json  eddyqc.json  raw.json
src/snapshot/flows/: add_ria.py  add_ria_wf.py  archive.py  archive_wf.py  bids.py  cat12.py  copy_to_dst_wf.py  copy_v1_to_dst.py  copy_v1_to_dst_wf.py  deface.py  fmriprep.py  fmriprep_wf.py  freesurfer.py  fslanat_wf.py  init_datalad.py  init_datalad_wf.py  main.py  mriqc.py  mriqc_wf.py  qsiprep.py  qsiprep_wf.py  rawdata.py  stage.py  stage_wf.py
src/snapshot/models/: __init__.py  jobs.py
src/snapshot/tasks/: utils.py
tests/: annex_v_datalad  copy_test.py  test_dataset.py  test_qsiprep.py  test_utils.py
tools/: annex_v_datalad  cuff1_zero.tsv  cuff2_zero.tsv  dump_dirt  gather_dirt.py  get_device_serial_number  make_test_products  mri.json  pull_applied_pressure.py  rate_rest2_red.py  store_bids.py  write_mri_json.py
