[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snapshot"
dynamic = ["version"]
description = 'Manage A2CPS Data Freezes'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Patrick Sadil", email = "psadil1@jh.edu" }]
dependencies = [
  "nilearn",
  "nibabel",
  "numpy",
  "polars>=1.17.1",
  "pydantic>=2.10.3",
]
[project.scripts]
snapshot = "snapshot.cli.snapshot:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "23.0.1"

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]


[tool.ruff]
exclude = ["tools"]
target-version = "py312"
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
