[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snapshot"
dynamic = ["version"]
description = 'Manage A2CPS Data Freezes'
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [{ name = "Patrick Sadil", email = "psadil1@jh.edu" }]
dependencies = ["nibabel", "polars>=1.17.1"]

[tool.hatch.version]
source = "vcs"
fallback-version = "3.0.0"

[[tool.hatch.envs.all.matrix]]
python = ["3.14"]

[tool.ruff]
target-version = "py314"
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
snapshot = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
nibabel = ">=5.3.2,<6"
polars = ">=1.37.0,<2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
